# calculatrice-qpur

./: .gitignore  Cargo.toml  MeLire.md  README.md
docs/: calculatrice_qpur.js  index.html
scripts/: build_web.sh
src/: app.rs  main.rs
src/app/: etat.rs  vue.rs
src/noyau/: canon.rs  eval.rs  expr.rs  format.rs  identites_trig.rs  jetons.rs  lecture.rs  mod.rs  rpn.rs  tests_fuzz_safe.rs  tests_scientifiques.rs  trig.rs
